[MessageBroker] Implement AppConsumer